Simplify the design of chat messages